[package]
name = "bsky-shogithread"
version = "0.1.0"
edition = "2021"

[dependencies]
bsky-sdk = "0.1.6"
env_logger = "0.11.3"
log = "0.4.22"
shogi-img = "0.3.0"
shogi-kifu-converter = "0.2.2"
shogi_core = "0.1.5"
shogi_legality_lite = "0.1.2"
shogi_usi_parser = "0.1.0"
thiserror = "1.0.63"
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread"] }
