[package]
name = "bsky-shogithread"
version = "0.1.0"
edition = "2021"

[dependencies]
bsky-sdk = "0.1.6"
env_logger = "0.11.3"
log = "0.4.22"
serde = { version = "1.0.204", features = ["derive"] }
shogi-img = "0.3.0"
shogi-kifu-converter = "0.2.2"
shogi_core = "0.1.5"
shogi_legality_lite = "0.1.2"
shogi_usi_parser = "0.1.0"
thiserror = "1.0.63"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "1.0.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[patch.crates-io]
bsky-sdk = { git = "https://github.com/sugyan/atrium", rev = "6f8fbd766c9deb942a5cf4d4c17eb2f153f5ba0e" }
